Enhance UI/UX with premium aesthetic and implement advanced SEO

--- a/index.html
+++ b/index.html
@@ -3,15 +3,52 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Join the exclusive waiting list for Farm 2 Spoon. Experience premium, 100% natural, dehydrated fruit and vegetable powders. Clean, honest, and powerful nutrition." />
-  <title>Farm 2 Spoon | Pure Nutrition. From Farm to Spoon.</title>
+    content="Farm 2 Spoon: Premium 100% natural dehydrated fruit and vegetable powders. Experience farm-fresh nutrition with our nutrient-dense ABC mix, Beetroot, and Moringa powders." />
+  <meta name="keywords"
+    content="Farm 2 Spoon, dehydrated fruit powders, vegetable powders, organic nutrition, ABC mix powder, Beetroot powder, Moringa powder, healthy food supplements, farm to spoon, clean eating India" />
+  <meta name="author" content="Farm 2 Spoon" />
+  <link rel="canonical" href="https://farm2spoon.com/" />
+  <title>Farm 2 Spoon | Best Dehydrated Fruit & Vegetable Powders in India</title>
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://farm2spoon.com/" />
+  <meta property="og:title" content="Farm 2 Spoon | Pure. Honest. Nutrient-Dense Dehydrated Powders" />
+  <meta property="og:description"
+    content="Transform your health with premium dehydrated fruit and vegetable powders. 100% natural, farm-fresh, and nutrient-dense." />
+  <meta property="og:image" content="/logo.svg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://farm2spoon.com/" />
+  <meta property="twitter:title" content="Farm 2 Spoon | Pure Dehydrated Nutrition" />
+  <meta property="twitter:description"
+    content="100% natural dehydrated fruit & vegetable powders. Healthy, convenient, and farm-fresh." />
+  <meta property="twitter:image" content="/logo.svg" />
+
+  <!-- Structured Data (Schema.org) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Farm 2 Spoon",
+    "url": "https://farm2spoon.com",
+    "logo": "https://farm2spoon.com/logo.svg",
+    "description": "Producers of premium 100% natural dehydrated fruit and vegetable powders.",
+    "sameAs": [
+      "https://www.instagram.com/farm2spoon.in"
+    ]
+  }
+  </script>
+
+  <!-- Modern Typography -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Outfit:wght@100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Montserrat:wght@300;400;500;600&family=Outfit:wght@100..900&display=swap"
     rel="stylesheet">
 </head>
 
