Optimize mobile UI, add SEO tags, and update favicon

--- a/index.html
+++ b/index.html
@@ -3,52 +3,62 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <link rel="icon" type="image/png" href="/favico.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>Farm 2 Spoon | Pure. Potent. Powdered Nutrition.</title>
+  <meta name="title" content="Farm 2 Spoon | Pure. Potent. Powdered Nutrition." />
   <meta name="description"
-    content="Farm 2 Spoon: Premium 100% natural dehydrated fruit and vegetable powders. Experience farm-fresh nutrition with our nutrient-dense ABC mix, Beetroot, and Moringa powders." />
+    content="Waitlist Open! Farm 2 Spoon transforms farm-fresh produce into nutrient-dense powders. 100% natural, preservative-free fruit & vegetable nutrition. Reserve your batch today." />
   <meta name="keywords"
-    content="Farm 2 Spoon, dehydrated fruit powders, vegetable powders, organic nutrition, ABC mix powder, Beetroot powder, Moringa powder, healthy food supplements, farm to spoon, clean eating India" />
+    content="Farm 2 Spoon, fruit powder, vegetable powder, dehydrated food, natural nutrition, clean label, healthy living, superfoods, sustainable farming, India" />
   <meta name="author" content="Farm 2 Spoon" />
+  <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://farm2spoon.com/" />
-  <title>Farm 2 Spoon | Best Dehydrated Fruit & Vegetable Powders in India</title>
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://farm2spoon.com/" />
-  <meta property="og:title" content="Farm 2 Spoon | Pure. Honest. Nutrient-Dense Dehydrated Powders" />
+  <meta property="og:title" content="Farm 2 Spoon | Pure. Potent. Powdered Nutrition." />
   <meta property="og:description"
-    content="Transform your health with premium dehydrated fruit and vegetable powders. 100% natural, farm-fresh, and nutrient-dense." />
-  <meta property="og:image" content="/logo.svg" />
+    content="Experience the future of nutrition. We turn harvest-fresh produce into convenient, powerful powders without losing their soul. Join the exclusive waitlist." />
+  <meta property="og:image" content="https://farm2spoon.com/og-image.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://farm2spoon.com/" />
-  <meta property="twitter:title" content="Farm 2 Spoon | Pure Dehydrated Nutrition" />
+  <meta property="twitter:title" content="Farm 2 Spoon | Pure. Potent. Powdered Nutrition." />
   <meta property="twitter:description"
-    content="100% natural dehydrated fruit & vegetable powders. Healthy, convenient, and farm-fresh." />
-  <meta property="twitter:image" content="/logo.svg" />
+    content="Experience the future of nutrition. We turn harvest-fresh produce into convenient, powerful powders. Join the exclusive waitlist." />
+  <meta property="twitter:image" content="https://farm2spoon.com/og-image.jpg" />
 
-  <!-- Structured Data (Schema.org) -->
+  <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Farm 2 Spoon",
-    "url": "https://farm2spoon.com",
-    "logo": "https://farm2spoon.com/logo.svg",
-    "description": "Producers of premium 100% natural dehydrated fruit and vegetable powders.",
-    "sameAs": [
-      "https://www.instagram.com/farm2spoon.in"
-    ]
-  }
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Farm 2 Spoon",
+      "url": "https://farm2spoon.com",
+      "logo": "https://farm2spoon.com/favico.png",
+      "description": "Farm 2 Spoon produces premium dehydrated fruit and vegetable powders using gentle dehydration techniques to preserve nutrients.",
+      "founders": [
+        {
+          "@type": "Person",
+          "name": "Manoj" 
+        }
+      ],
+      "sameAs": [
+        "https://www.instagram.com/farm2spoon",
+        "https://www.linkedin.com/company/farm2spoon"
+      ]
+    }
   </script>
 
-  <!-- Modern Typography -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Montserrat:wght@300;400;500;600&family=Outfit:wght@100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Outfit:wght@100..900&display=swap"
     rel="stylesheet">
 </head>
 
