fix: Rename favicon and update domain references to farm2spoon.in

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favico.png" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
@@ -15,23 +15,23 @@
     content="Farm 2 Spoon, fruit powder, vegetable powder, dehydrated food, natural nutrition, clean label, healthy living, superfoods, sustainable farming, India" />
   <meta name="author" content="Farm 2 Spoon" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://farm2spoon.com/" />
+  <link rel="canonical" href="https://farm2spoon.in/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://farm2spoon.com/" />
+  <meta property="og:url" content="https://farm2spoon.in/" />
   <meta property="og:title" content="Farm 2 Spoon | Pure. Potent. Powdered Nutrition." />
   <meta property="og:description"
     content="Experience the future of nutrition. We turn harvest-fresh produce into convenient, powerful powders without losing their soul. Join the exclusive waitlist." />
-  <meta property="og:image" content="https://farm2spoon.com/og-image.jpg" />
+  <meta property="og:image" content="https://farm2spoon.in/og-image.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://farm2spoon.com/" />
+  <meta property="twitter:url" content="https://farm2spoon.in/" />
   <meta property="twitter:title" content="Farm 2 Spoon | Pure. Potent. Powdered Nutrition." />
   <meta property="twitter:description"
     content="Experience the future of nutrition. We turn harvest-fresh produce into convenient, powerful powders. Join the exclusive waitlist." />
-  <meta property="twitter:image" content="https://farm2spoon.com/og-image.jpg" />
+  <meta property="twitter:image" content="https://farm2spoon.in/og-image.jpg" />
 
   <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
@@ -39,8 +39,8 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Farm 2 Spoon",
-      "url": "https://farm2spoon.com",
-      "logo": "https://farm2spoon.com/favico.png",
+      "url": "https://farm2spoon.in",
+      "logo": "https://farm2spoon.in/favicon.png",
       "description": "Farm 2 Spoon produces premium dehydrated fruit and vegetable powders using gentle dehydration techniques to preserve nutrients.",
       "founders": [
         {
